@@ -21,6 +21,7 @@
     desktop name sort natural icase
     fix desktop center wallpaper larger than screen #296
     detect desktop size changes
+    new default desktop background colors
 0.8.7   2013-03-17:
     added translation files to transifex.com [Delix]
     Delix and Aqualung71 contributed to German translation
